Add queens-3 tag for trove
Also for trove-dashboard.
python-troveclient was tagged earlier.

Change-Id: Ib7761518acf76c6b657288ea516beea19120ebc8

--- a/deliverables/queens/trove-dashboard.yaml
+++ b/deliverables/queens/trove-dashboard.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 100229f18cb13010d5c0458a1fe9dfc8cdbe728d
         repo: openstack/trove-dashboard
     version: 10.0.0.0b1
+  - projects:
+      - hash: 683bcdc0b0385fde23e22dcf2f6841b7a5242bb4
+        repo: openstack/trove-dashboard
+    version: 10.0.0.0b3
