--- a/deliverables/queens/trove.yaml
+++ b/deliverables/queens/trove.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: d7b773d2b07f0c95909ef73c4644a63f09fd82c3
         repo: openstack/trove
     version: 9.0.0.0b1
+  - projects:
+      - hash: fd5ad7f1122c6cff286f101dffbd5de45a5d51d8
+        repo: openstack/trove
+    version: 9.0.0.0b3
