Fix PTL nomination week
PTL nominations were listed the week of Queens-3, but they actually
do not start until the following week. A little late, but we should
change it to accurately reflect the right point on the schedule.

Change-Id: I60b27b76ca0d2022b1d09bfd3e801fe6de152436

--- a/doc/source/queens/schedule.yaml
+++ b/doc/source/queens/schedule.yaml
@@ -117,10 +117,11 @@ cycle:
   project-specific:
   - q-keystone-ffreeze
   - r-email-deadline
-  - r-ptl-nomination
 - end: '2018-02-02'
   name: R-4
   start: '2018-01-29'
+  project-specific:
+  - r-ptl-nomination
 - end: '2018-02-09'
   name: R-3
   start: '2018-02-05'
