--- a/deliverables/queens/python-novaclient.yaml
+++ b/deliverables/queens/python-novaclient.yaml
@@ -1,4 +1,7 @@
 ---
+branches:
+  - location: 10.1.0
+    name: stable/queens
 include-pypi-link: yes
 launchpad: python-novaclient
 release-model: cycle-with-intermediary
@@ -9,4 +12,8 @@ releases:
   - version: 10.0.0
     projects:
       - hash: fefc3ba723865307f4cc2ca287eb59faa4e8a5b1
+        repo: openstack/python-novaclient
+  - version: 10.1.0
+    projects:
+      - hash: ed73aadf19feb1279b653721ef42c65016edae52
         repo: openstack/python-novaclient
