Link in osc-placement release notes
Change-Id: I2159ca938a44abf99e8e176570e748761762c56d

--- a/deliverables/queens/osc-placement.yaml
+++ b/deliverables/queens/osc-placement.yaml
@@ -5,8 +5,7 @@ branches:
 include-pypi-link: yes
 launchpad: placement-osc-plugin
 release-model: cycle-with-intermediary
-# TODO(mriedem): Need to add the release notes link once the publishing job
-# is setup on the repo.
+release-notes: https://docs.openstack.org/releasenotes/osc-placement/unreleased.html
 team: nova
 type: library
 releases:
