TripleO queens milestone 3 release
Change-Id: I7f5aa1b5541d38b0f46890c4a96a3207eae0849d

--- a/deliverables/queens/instack-undercloud.yaml
+++ b/deliverables/queens/instack-undercloud.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 758e8caee0caf791889577be5d53e5f1a5187179
         repo: openstack/instack-undercloud
     version: 8.1.0
+  - projects:
+      - hash: 5dd4e93f5965e133bbf988573298b6b5cb13fb0d
+        repo: openstack/instack-undercloud
+    version: 8.2.0
