--- a/deliverables/queens/os-apply-config.yaml
+++ b/deliverables/queens/os-apply-config.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 8dbeb75d798869fe186d1d916314b2362b402c4e
         repo: openstack/os-apply-config
     version: 8.1.0
+  - projects:
+      - hash: 775d6dc6ddc16c31566b18b5054203c79b00e8d1
+        repo: openstack/os-apply-config
+    version: 8.2.0
