--- a/deliverables/queens/os-collect-config.yaml
+++ b/deliverables/queens/os-collect-config.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: fd530b4294dc94ae64dfe0bdc70c628d0402974e
         repo: openstack/os-collect-config
     version: 8.1.0
+  - projects:
+      - hash: 5f2835e7a049d128623fa07ba1d9b103284348f8
+        repo: openstack/os-collect-config
+    version: 8.2.0
