--- a/deliverables/queens/os-net-config.yaml
+++ b/deliverables/queens/os-net-config.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: bb7d8296d7a27ed2ddd9702b56c1fb0d6ae37b6e
         repo: openstack/os-net-config
     version: 8.1.0
+  - projects:
+      - hash: 123ddf0df4e0a5d95952c47dc9fe1021427a4209
+        repo: openstack/os-net-config
+    version: 8.2.0
