--- a/deliverables/queens/puppet-tripleo.yaml
+++ b/deliverables/queens/puppet-tripleo.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: ce3432da8cd2267f3a7758d1168825d1f0d8fa0a
         repo: openstack/puppet-tripleo
     version: 8.1.0
+  - projects:
+      - hash: 768733344563356083e12d92e47aead35f8354a7
+        repo: openstack/puppet-tripleo
+    version: 8.2.0
