--- a/deliverables/queens/tripleo-common.yaml
+++ b/deliverables/queens/tripleo-common.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: dc2101ba72cb46e8002d95ed7c73fbee60c34f91
         repo: openstack/tripleo-common
     version: 8.3.0
+  - projects:
+      - hash: c28e8cbb8a96035344cb5107020a35668fa0adda
+        repo: openstack/tripleo-common
+    version: 8.4.0
