--- a/deliverables/queens/tripleo-heat-templates.yaml
+++ b/deliverables/queens/tripleo-heat-templates.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 2f9bd14db7cdeaeb448c40a9f8f82041e87a7c5f
         repo: openstack/tripleo-heat-templates
     version: 8.0.0.0b2
+  - projects:
+      - hash: 5926cbaa90ca0c608af00ec8d6d5b7be90f5af32
+        repo: openstack/tripleo-heat-templates
+    version: 8.0.0.0b3
