--- a/deliverables/queens/tripleo-image-elements.yaml
+++ b/deliverables/queens/tripleo-image-elements.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 66592777d6e8012ed06758dccc8876cad02ec72b
         repo: openstack/tripleo-image-elements
     version: 8.0.0.0b2
+  - projects:
+      - hash: fd700723853aec79362dd7c9a03fa49d021cd3fd
+        repo: openstack/tripleo-image-elements
+    version: 8.0.0.0b3
