--- a/deliverables/queens/tripleo-puppet-elements.yaml
+++ b/deliverables/queens/tripleo-puppet-elements.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 97df5376053b2a1ebdc65de6403d873fab7c1600
         repo: openstack/tripleo-puppet-elements
     version: 8.0.0.0b2
+  - projects:
+      - hash: 2f3e003ac32176f441ead1a571c3be41ed9db03d
+        repo: openstack/tripleo-puppet-elements
+    version: 8.0.0.0b3
