--- a/deliverables/queens/tripleo-ui.yaml
+++ b/deliverables/queens/tripleo-ui.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: f2820bd0cc6560cf9467cca92ff2f7d749a43fe1
         repo: openstack/tripleo-ui
     version: 8.1.0
+  - projects:
+      - hash: 131a42685437bccbf0fb53b85d71de471c08cff7
+        repo: openstack/tripleo-ui
+    version: 8.2.0
