--- a/deliverables/queens/os-refresh-config.yaml
+++ b/deliverables/queens/os-refresh-config.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: e6f3b30ed50b6ac53f1ea8943f31ad8a548f687d
         repo: openstack/os-refresh-config
     version: 8.1.0
+  - projects:
+      - hash: 663a24638d4b856c65d5dd693efe135452ff9df8
+        repo: openstack/os-refresh-config
+    version: 8.2.0
