--- a/deliverables/queens/paunch.yaml
+++ b/deliverables/queens/paunch.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: e1f2d3500bffd4418c69afca649bbfb333699dd6
         repo: openstack/paunch
     version: 2.1.0
+  - projects:
+      - hash: e2d2344abb75f2c8c475eaad74fd4f6bdee689cd
+        repo: openstack/paunch
+    version: 2.2.0
