--- a/deliverables/queens/tripleo-validations.yaml
+++ b/deliverables/queens/tripleo-validations.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 6406ef8bd8b99bc7764aed28db55ccbb0ce984ce
         repo: openstack/tripleo-validations
     version: 8.1.0
+  - projects:
+      - hash: 8b3a8eb3b393f618d7a2539a06916ffc9d46afb1
+        repo: openstack/tripleo-validations
+    version: 8.2.0
