--- a/deliverables/queens/manila-ui.yaml
+++ b/deliverables/queens/manila-ui.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/manila-ui
         hash: 0102041340e83ad71ac02ae367e3d130a06cca86
+  - version: 2.13.0
+    projects:
+      - repo: openstack/manila-ui
+        hash: da1ac1ec03352332616849de8d947d2f9de20ce5
