--- a/deliverables/queens/python-manilaclient.yaml
+++ b/deliverables/queens/python-manilaclient.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: 4d3652868b4ffd82cecb540cac01f64728afcd67
         repo: openstack/python-manilaclient
     version: 1.20.0
+  - projects:
+      - hash: 27c189f0f3e61590490380d6640628c11b5f7324
+        repo: openstack/python-manilaclient
+    version: 1.21.0
