--- a/deliverables/queens/manila.yaml
+++ b/deliverables/queens/manila.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/manila
         hash: 128460ff83c213219711c4afc284993e105012b5
+  - version: 6.0.0.0b3
+    projects:
+      - repo: openstack/manila
+        hash: a07d5229704841d5a8a6333b375ece4b6e0f9269
