--- a/deliverables/queens/release-test.yaml
+++ b/deliverables/queens/release-test.yaml
@@ -38,3 +38,8 @@ releases:
         repo: openstack/release-test
         tarball-base: openstack-release-test
     version: 0.10.2
+  - projects:
+      - hash: 218c9c82f168f1db681b27842b5a829428c6b5e1
+        repo: openstack/release-test
+        tarball-base: openstack-release-test
+    version: 0.11.0
