save logs for check jobs when they succeed
The default is to discard logs when a job succeeds, but we need the
logs for these jobs because they are reports that reviewers use to
evaluate the releases being proposed.

Change-Id: Ibba75a547bee5a8a5e7fba76b5962c0382009bb2
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -8,11 +8,16 @@
     name: openstack/releases
     check:
       jobs:
-        - openstack-tox-validate
-        - releases-tox-list-changes
+        - openstack-tox-validate:
+            vars:
+              zuul_site_upload_logs: true
+        - releases-tox-list-changes:
+            vars:
+              zuul_site_upload_logs: true
         - build-openstack-sphinx-docs:
             vars:
               sphinx_python: python3
+              zuul_site_upload_logs: true
 
     gate:
       jobs:
