--- a/deliverables/queens/ceilometer-powervm.yaml
+++ b/deliverables/queens/ceilometer-powervm.yaml
@@ -12,3 +12,7 @@ releases:
       - repo: openstack/ceilometer-powervm
         hash: e66d39dec8791f219246452d3bb0ed1138c86abd
     version: 6.0.0.0b2
+  - projects:
+      - repo: openstack/ceilometer-powervm
+        hash: a31d0fa44ac64e6168e86956c6ba17dcdae2dfd3
+    version: 6.0.0.0b3
