--- a/deliverables/queens/oslo.versionedobjects.yaml
+++ b/deliverables/queens/oslo.versionedobjects.yaml
@@ -29,6 +29,10 @@ releases:
       - hash: 3eefca693eab8b313d17d528bef544035b1707b4
         repo: openstack/oslo.versionedobjects
     version: 1.31.1
+  - projects:
+      - hash: c95f0c876840e36f37acb14d5eec5238d85e7dce
+        repo: openstack/oslo.versionedobjects
+    version: 1.31.2
 branches:
   - name: stable/queens
     location: 1.31.1
