--- a/deliverables/queens/keystone.yaml
+++ b/deliverables/queens/keystone.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/keystone
         hash: 41cd37b494bf29cc2045d17061ad846b3a18eb78
+  - version: 13.0.0.0b3
+    projects:
+      - repo: openstack/keystone
+        hash: 48486544f32ac627dbee9d7af879b42ed3ec7b54
