queens: tag nova 17.0.0.0b3
We still have a lot of approved features sitting in the gate
but those probably won't land for a few days at this point,
so this is just the point-in-time q3 tag.

Change-Id: I4a232294f3d04eca8a6fe357932eb4ef78f224eb

--- a/deliverables/queens/nova.yaml
+++ b/deliverables/queens/nova.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 81544829d14aebaaa717ffbe6ec33c67a2f11b7f
+  - version: 17.0.0.0b3
+    projects:
+      - repo: openstack/nova
+        hash: 81f0ca1352d4aa12717573b95586de60141c8e0e
