--- a/deliverables/queens/zaqar.yaml
+++ b/deliverables/queens/zaqar.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/zaqar
         hash: 07a2a5b28811d3eb3e8649b9140d422053ddea2f
+  - version: 6.0.0.0b3
+    projects:
+      - repo: openstack/zaqar
+        hash: 14de6dc7f934b5bbe26df96a4971b8dbf30adbc3
