--- a/deliverables/queens/zaqar-ui.yaml
+++ b/deliverables/queens/zaqar-ui.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/zaqar-ui
         hash: 2406e9e7e80bc2654767751c75155178c8269f74
+  - version: 4.0.0.0b3
+    projects:
+      - repo: openstack/zaqar-ui
+        hash: 8ed70a8322f78c7298c9c685143a1f916603ba0c
