--- a/deliverables/queens/tricircle.yaml
+++ b/deliverables/queens/tricircle.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/tricircle
         hash: 141a89c682838b4f2bc38f58626f3b9e10b19798
+  - version: 4.3.0
+    projects:
+      - repo: openstack/tricircle
+        hash: 1cbc3bb2c05fcd90a1a447be2e27e00199bb9277
