--- a/deliverables/queens/murano-dashboard.yaml
+++ b/deliverables/queens/murano-dashboard.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/murano-dashboard
         hash: c0b5c009e7180880316dd148c5fe14a2a8da5b73
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/murano-dashboard
+        hash: c3af64c5e63aca0f0b997e88e886d6ac71a5d20a
