--- a/deliverables/queens/murano.yaml
+++ b/deliverables/queens/murano.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/murano
         hash: ac67e669a9010eff05e54b6a83e19e0431709a8a
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/murano
+        hash: d7a54d69f9107d79ff12f39d9ccf996426601cc4
