--- a/deliverables/queens/solum.yaml
+++ b/deliverables/queens/solum.yaml
@@ -3,3 +3,8 @@ launchpad: solum
 release-model: cycle-with-intermediary
 team: solum
 type: service
+releases:
+  - version: 5.5.0
+    projects:
+      - repo: openstack/solum
+        hash: a0ee3a2a3635f66cd41b93599b8fe036ddb1e500
