--- a/deliverables/queens/barbican.yaml
+++ b/deliverables/queens/barbican.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 21deca8a4ba0444270ca1cb7c692a35012923ae7
         repo: openstack/barbican
     version: 6.0.0.0b2
+  - projects:
+      - hash: 3d3ea33e8bd6435f442aed696bb70337d9b08265
+        repo: openstack/barbican
+    version: 6.0.0.0b3
