--- a/deliverables/queens/sahara-dashboard.yaml
+++ b/deliverables/queens/sahara-dashboard.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/sahara-dashboard
         hash: 5ae904c28cc5269cfb18001efad1f6fb4060f29b
+  - version: 8.0.0.0b3
+    projects:
+      - repo: openstack/sahara-dashboard
+        hash: 4c87105c499d7b049cf6853cc7814a55008f478e
