--- a/deliverables/queens/sahara-image-elements.yaml
+++ b/deliverables/queens/sahara-image-elements.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/sahara-image-elements
         hash: 7880bf12fdd4b5e52697a9c72a6844da60a7e3e1
+  - version: 8.0.0.0b3
+    projects:
+      - repo: openstack/sahara-image-elements
+        hash: e5f50ed163886d4922d8be77957d30006e5bb9f2
