--- a/deliverables/queens/sahara.yaml
+++ b/deliverables/queens/sahara.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/sahara
         hash: 32d4c744f7dcdb2ddd7bd74669098c320a9d294f
+  - version: 8.0.0.0b3
+    projects:
+      - repo: openstack/sahara
+        hash: ddfdb0c925f502c90759442b6b1e6d71730f6aba
