--- a/deliverables/queens/blazar.yaml
+++ b/deliverables/queens/blazar.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/blazar
         hash: 2b824c579dbfa6083e3ffdebce45bc6f79c4a9ec
+  - version: 1.0.0.0b3
+    projects:
+      - repo: openstack/blazar
+        hash: 3c4f0644bd164b5f83224609d013c7b6bec8d3ee
