--- a/deliverables/queens/kolla.yaml
+++ b/deliverables/queens/kolla.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/kolla
         hash: a0b15e40bbd3bcd70e5bf16958d48271b96381aa
+  - version: 6.0.0.0b3
+    projects:
+      - repo: openstack/kolla
+        hash: 0c9e0b8c00ca329ac95f306fd830d4a4309d9bfa
