--- a/deliverables/queens/kolla-ansible.yaml
+++ b/deliverables/queens/kolla-ansible.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/kolla-ansible
         hash: 4d8816a045ded6e465b482d3e697b9b4b6b1a6d3
+  - version: 6.0.0.0b3
+    projects:
+      - repo: openstack/kolla-ansible
+        hash: 02fa35dc8ebc7da8e115c61bf90aacd30cff8b30
