Create Cinder Queens-3 Tag
This patch marks Cinder Queens 3.

Change-Id: Ib9726604668f4c664584c3277c049c01f6318440

--- a/deliverables/queens/cinder.yaml
+++ b/deliverables/queens/cinder.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 61962d2522fb778d0bc2e0f511a541579e7b2f89
         repo: openstack/cinder
     version: 12.0.0.0b2
+  - projects:
+      - hash: f41e5565218fcd4614e68e2e2609c96f3a645c15
+        repo: openstack/cinder
+    version: 12.0.0.0b3
