--- a/deliverables/queens/glance.yaml
+++ b/deliverables/queens/glance.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/glance
         hash: d8bcf8ba13a05f9dcd395ac2064c9099c759147a
+  - version: 16.0.0.0b3
+    projects:
+      - repo: openstack/glance
+        hash: 631add1ba849eac67ecb36ea4c90b57a300a96fa
