--- a/deliverables/queens/searchlight.yaml
+++ b/deliverables/queens/searchlight.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/searchlight
         hash: 5f17d4270fb3606dfbb776fab6142968830462df
+  - version: 4.0.0.0b3
+    projects:
+      - repo: openstack/searchlight
+        hash: 8814ba00815ad6e2771dc77fd76a92b59cb0e8a8
