--- a/deliverables/queens/searchlight-ui.yaml
+++ b/deliverables/queens/searchlight-ui.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/searchlight-ui
         hash: e9cc9b8b50a37082fda051dfd583a1ef26fd7d5e
+  - version: 4.0.0.0b3
+    projects:
+      - repo: openstack/searchlight-ui
+        hash: b48ec95d4f5e785a602a6bfa0b15e7cb97fbabfd
