--- a/deliverables/queens/mistral.yaml
+++ b/deliverables/queens/mistral.yaml
@@ -21,3 +21,11 @@ releases:
         hash: f9ff2798bd21a672933c18f9fc139a770bf8150e
       - repo: openstack/mistral-extra
         hash: b1f04293b874e19de4bfa8b6a9776371a7f59727
+  - version: 6.0.0.0b3
+    projects:
+      - repo: openstack/mistral
+        hash: b70ba99e22a61546e6b490ecbafaff4c4ee2ee21
+      - repo: openstack/mistral-dashboard
+        hash: e221ba4dfb55e0535688bf8dffa44d8a9c24be0d
+      - repo: openstack/mistral-extra
+        hash: b1f04293b874e19de4bfa8b6a9776371a7f59727
