--- a/deliverables/queens/python-cloudkittyclient.yaml
+++ b/deliverables/queens/python-cloudkittyclient.yaml
@@ -4,3 +4,15 @@ launchpad: cloudkitty
 release-model: cycle-with-intermediary
 team: cloudkitty
 type: library
+releases:
+  - version: 1.2.0
+    projects:
+      - repo: openstack/python-cloudkittyclient
+        hash: 075cb4993d7dcd51a9e8928571e27d88e213b0fc
+    highlights: >
+      Drop py34 target.
+      Remove log translations.
+      Delete unused directory.
+branches:
+  - name: stable/queens
+    location: 1.2.0
