Add the release notes link to python-octaviaclient
The link to the queens release notes for python-octaviaclient was missing.
This patch corrects that oversight.

Change-Id: Ie18152e677261efc96348a2db5fac6610b6f294c

--- a/deliverables/queens/python-octaviaclient.yaml
+++ b/deliverables/queens/python-octaviaclient.yaml
@@ -2,6 +2,7 @@
 include-pypi-link: yes
 storyboard: 911
 release-model: cycle-with-intermediary
+release-notes: https://docs.openstack.org/releasenotes/python-octaviaclient/queens.html
 team: octavia
 type: library
 branches:
