--- a/deliverables/queens/heat.yaml
+++ b/deliverables/queens/heat.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/heat
         hash: dc25b6911f3f64c296794d285ced01b15be33e36
+  - version: 10.0.0.0b3
+    projects:
+      - repo: openstack/heat
+        hash: 54dd15cfd85217adea2224d228306cb504c4164f
