--- a/deliverables/queens/python-heatclient.yaml
+++ b/deliverables/queens/python-heatclient.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/python-heatclient
         hash: fbff3c60b78b5cbfea682f8a9206a83db46ee2a3
+  - version: 1.13.1
+    projects:
+      - repo: openstack/python-heatclient
+        hash: c821f148d876ff42d5c7ca5a9a7d8666a43795c8
