--- a/deliverables/queens/heat-agents.yaml
+++ b/deliverables/queens/heat-agents.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/heat-agents
         hash: 756fcafdf025351ea862ae57f29b8eff9beee362
+  - version: 1.5.2
+    projects:
+      - repo: openstack/heat-agents
+        hash: 9f9ae41d451cbf1dcf4d0951517a700b8d5db6b8
