--- a/deliverables/queens/heat-dashboard.yaml
+++ b/deliverables/queens/heat-dashboard.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/heat-dashboard
         hash: be97728d33cc6a26c098f9a6a4c6afc7c094491c
+  - version: 1.0.1
+    projects:
+      - repo: openstack/heat-dashboard
+        hash: cf178ef7a254ae17bb16e76baf1cd641cf553d97
