--- a/deliverables/queens/tripleo-ipsec.yaml
+++ b/deliverables/queens/tripleo-ipsec.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 5e80d4fd08070029e5ddc8a27c8f256a7c4b2aee
         repo: openstack/tripleo-ipsec
     version: 8.0.0
+  - projects:
+      - hash: 00df8e1adb939d357805eadefaf54f4f326ee21f
+        repo: openstack/tripleo-ipsec
+    version: 8.0.1
