--- a/deliverables/queens/ovsdbapp.yaml
+++ b/deliverables/queens/ovsdbapp.yaml
@@ -24,6 +24,10 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: 7d4b4b6d7943aac4f4ed89a5e6d2c30d9b9de887
+  - version: 0.9.1
+    projects:
+      - repo: openstack/ovsdbapp
+        hash: c3288aec527ef21eb57d755540e34e6ac5382a7c
 branches:
   - name: stable/queens
     location: 0.9.0
