--- a/deliverables/pike/ovsdbapp.yaml
+++ b/deliverables/pike/ovsdbapp.yaml
@@ -24,6 +24,10 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: 742754bce3c9453f8c7186455a92e4f6d6b18ace
+  - version: 0.4.2
+    projects:
+      - repo: openstack/ovsdbapp
+        hash: e5ded80fe579d967642ee9173874ba924395d3af
 branches:
   - name: stable/pike
     location: 0.4.0
