--- a/deliverables/queens/python-openstacksdk.yaml
+++ b/deliverables/queens/python-openstacksdk.yaml
@@ -16,6 +16,11 @@ releases:
         repo: openstack/python-openstacksdk
         tarball-base: openstacksdk
     version: 0.11.0
+  - projects:
+      - hash: 5de34797ab9002333830ac606cd5c8349a5fe17c
+        repo: openstack/python-openstacksdk
+        tarball-base: openstacksdk
+    version: 0.11.1
 branches:
   - name: stable/queens
     location: 0.11.0
