--- a/deliverables/queens/python-pankoclient.yaml
+++ b/deliverables/queens/python-pankoclient.yaml
@@ -4,3 +4,9 @@ launchpad: python-pankoclient
 release-model: cycle-with-intermediary
 team: Telemetry
 type: client-library
+releases:
+  - version: 0.4.0
+    projects:
+      - repo: openstack/python-pankoclient
+        hash: e9a975fba6ad501f50280da671b9a2a8794474e7
+        tarball-base: pankoclient
