--- a/deliverables/ocata/aodh.yaml
+++ b/deliverables/ocata/aodh.yaml
@@ -20,3 +20,7 @@ releases:
       - hash: ab45afcfe9a531127ab6f06a128ec5db9cfe7a06
         repo: openstack/aodh
     version: 4.0.2
+  - projects:
+      - hash: c77c0aac4db000dbd8bee2b68080773deaf90071
+        repo: openstack/aodh
+    version: 4.0.3
