--- a/deliverables/ocata/ceilometer.yaml
+++ b/deliverables/ocata/ceilometer.yaml
@@ -32,3 +32,7 @@ releases:
       - hash: b3725525a7e2cb8dba696f6335b0f442aff399d4
         repo: openstack/ceilometer
     version: 8.1.2
+  - projects:
+      - hash: 24e72132e76d38c93875757c7a56d6c651741391
+        repo: openstack/ceilometer
+    version: 8.1.3
