--- a/deliverables/pike/aodh.yaml
+++ b/deliverables/pike/aodh.yaml
@@ -10,6 +10,10 @@ releases:
       - hash: 48468c3f525676f8ddae2dae1e7d19006d5c4342
         repo: openstack/aodh
     version: 5.0.0
+  - projects:
+      - hash: f0ec11eef92d39bd3f07e026a404e2e7aa7fa6bc
+        repo: openstack/aodh
+    version: 5.1.0
 branches:
   - location: 5.0.0
     name: stable/pike
