--- a/deliverables/queens/ceilometermiddleware.yaml
+++ b/deliverables/queens/ceilometermiddleware.yaml
@@ -4,3 +4,8 @@ launchpad: ceilometermiddleware
 release-model: cycle-with-intermediary
 team: Telemetry
 type: library
+releases:
+  - version: 1.2.0
+    projects:
+      - repo: openstack/ceilometermiddleware
+        hash: e3169206b7c3f4636e99ad0611c17e2ab1078c76
