final queens branches for libraries
Change-Id: I24fcdc58225cc8ae31860d9e250f186d4f5b3466
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/queens/python-aodhclient.yaml
+++ b/deliverables/queens/python-aodhclient.yaml
@@ -10,3 +10,6 @@ releases:
       - repo: openstack/python-aodhclient
         hash: 86ac8fd3d31f19a88443a15609a2642c98a6cf7f
         tarball-base: aodhclient
+branches:
+  - location: 1.0.0
+    name: stable/queens
