--- a/deliverables/queens/python-freezerclient.yaml
+++ b/deliverables/queens/python-freezerclient.yaml
@@ -12,3 +12,6 @@ releases:
     projects:
       - repo: openstack/python-freezerclient
         hash: b92f04af68b1ed96bb96256f820c99d3824b3eab
+branches:
+  - location: 1.6.0
+    name: stable/queens
