--- a/deliverables/queens/python-pankoclient.yaml
+++ b/deliverables/queens/python-pankoclient.yaml
@@ -10,3 +10,6 @@ releases:
       - repo: openstack/python-pankoclient
         hash: e9a975fba6ad501f50280da671b9a2a8794474e7
         tarball-base: pankoclient
+branches:
+  - location: 0.4.0
+    name: stable/queens
