--- a/deliverables/queens/python-magnumclient.yaml
+++ b/deliverables/queens/python-magnumclient.yaml
@@ -9,3 +9,6 @@ releases:
       - hash: e3202b95e1f708a0db284e05f2b0f9a58127b65a
         repo: openstack/python-magnumclient
     version: 2.8.0
+branches:
+  - location: 2.8.0
+    name: stable/queens
