--- a/deliverables/queens/python-manilaclient.yaml
+++ b/deliverables/queens/python-manilaclient.yaml
@@ -21,3 +21,6 @@ releases:
       - hash: 27c189f0f3e61590490380d6640628c11b5f7324
         repo: openstack/python-manilaclient
     version: 1.21.0
+branches:
+  - location: 1.21.0
+    name: stable/queens
