add semaphore for publishing to the releases website
Change-Id: I8a340aac8d8581f4d99741b45d244f41ae61bc22
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -4,6 +4,12 @@
     vars:
       tox_envlist: list-changes
 
+# We only want one job publishing to the releases website at a time,
+# otherwise we will clobber part of the output.
+- semaphore:
+    name: static-publish-releases
+    max: 1
+
 - project:
     name: openstack/releases
     check:
@@ -31,3 +37,4 @@
         - publish-static:
             dependencies:
               - tag-releases
+            semaphore: static-publish-releases
