--- a/deliverables/_independent/reno.yaml
+++ b/deliverables/_independent/reno.yaml
@@ -143,3 +143,7 @@ releases:
       - hash: 9d058ae097e6cfac079fdbabadfc4270c6297e7f
         repo: openstack/reno
     version: 2.6.0
+  - projects:
+      - hash: b9cf9a7371eec7f20089f51bbd12e78963a10960
+        repo: openstack/reno
+    version: 2.7.0
