--- a/deliverables/pike/monasca-agent.yaml
+++ b/deliverables/pike/monasca-agent.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 1b2edfa4ec724f0867401adbda1021d2e82c59ba
         repo: openstack/monasca-agent
     version: 2.2.1
+  - projects:
+      - hash: ea6d057b93a7f682c455b8a155ddec5d838c4085
+        repo: openstack/monasca-agent
+    version: 2.2.2
 branches:
   - location: 2.2.0
     name: stable/pike
