--- a/deliverables/ocata/monasca-ui.yaml
+++ b/deliverables/ocata/monasca-ui.yaml
@@ -23,5 +23,9 @@ releases:
     projects:
       - repo: openstack/monasca-ui
         hash: 4491b4729c71e13e1a3213d15e5f0774edeb2e2e
+  - projects:
+      - hash: 201f1ca2b57bbd0e17d6ce254a9c0c783b660eb6
+        repo: openstack/monasca-ui
+    version: 1.5.2
 repository-settings:
   openstack/monasca-ui: {}
