save the logs from tag-releases
Sometimes when the job succeeds we still need to review the logs.

Change-Id: I2ea1f11100a6233b13f01541f140103e224182ce
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -27,7 +27,9 @@
               sphinx_python: python3
     release-post:
       jobs:
-        - tag-releases
+        - tag-releases:
+            vars:
+              zuul_site_upload_logs: true
         - publish-static:
             dependencies:
               - tag-releases
