Revert "save the logs from tag-releases"
This reverts commit 66b769123dc5376aa3ec16caddca59920e1ba6e7.

Change-Id: Ia7e7e375297c1be166337f58e5681458a70f5956
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -27,9 +27,7 @@
               sphinx_python: python3
     release-post:
       jobs:
-        - tag-releases:
-            vars:
-              zuul_site_upload_logs: true
+        - tag-releases
         - publish-static:
             dependencies:
               - tag-releases
