--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -8,16 +8,11 @@
     name: openstack/releases
     check:
       jobs:
-        - openstack-tox-validate:
-            vars:
-              zuul_site_upload_logs: true
-        - releases-tox-list-changes:
-            vars:
-              zuul_site_upload_logs: true
+        - openstack-tox-validate
+        - releases-tox-list-changes
         - build-openstack-sphinx-docs:
             vars:
               sphinx_python: python3
-              zuul_site_upload_logs: true
 
     gate:
       jobs:
@@ -27,9 +22,7 @@
               sphinx_python: python3
     release-post:
       jobs:
-        - tag-releases:
-            vars:
-              zuul_site_upload_logs: true
+        - tag-releases
         - publish-static:
             dependencies:
               - tag-releases
