Add Queens cycle-highlights messages
Added example cycle-highlights for Cinder, Horizon,
Ironic and Nova.

Change-Id: Ifaf130746b78269660e7200dcc55e5d00671ebcb
Depends-On: If265606eb20fa3d49e3cf4a684ea683de4267927

--- a/deliverables/queens/ironic.yaml
+++ b/deliverables/queens/ironic.yaml
@@ -12,3 +12,6 @@ releases:
       - hash: 76945299a86babcda300b073e1604ac0aeeb13d3
         repo: openstack/ironic
     version: 10.0.0
+cycle-highlights:
+  - Finished implementation of Ironic Rescue Mode. Users can repair instances,
+    troubleshoot misconfigured nodes, lost SSH keys, etc.
