--- a/deliverables/queens/cinder.yaml
+++ b/deliverables/queens/cinder.yaml
@@ -16,3 +16,5 @@ releases:
       - hash: f41e5565218fcd4614e68e2e2609c96f3a645c15
         repo: openstack/cinder
     version: 12.0.0.0b3
+cycle-highlights:
+  - Support for attaching a single Cinder volume to multile VM instances.
