--- a/deliverables/queens/horizon.yaml
+++ b/deliverables/queens/horizon.yaml
@@ -16,3 +16,6 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: f1eba8073d9c25f7453911f0c7141959b2e0848c
+cycle-highlights:
+  - Introduced drag and drop UI for Heat Orchestration Templates (HOT).
+    Previously only took plaintext files.
